added timer that starts on click

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src = index.js></script>
+   
 </head>
 <body>
+<!-- create boxes to put things in-->
+    <div id = 'quizBox'></div>
+    <button id='startButton'>Start Quiz</button>
+    <div id= 'finalScore'></div>
+    <div id= 'time'></div>
+
+
+
+
     
+ <script src = index.js></script>
 </body>
 </html>
