added function to display header/prompt on load

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 </head>
 <body>
 <!-- create boxes to put things in-->
-    <div id = 'quizBox'></div>
-    <button id='startButton'>Start Quiz</button>
-    <div id= 'finalScore'></div>
-    <div id= 'time'></div>
-
-
+    <div id = 'container'>
+        <button id='startButton'>Start Quiz</button>
+        <div id= 'time'></div>
+        <div id= 'finalScore'></div>
+        <h1 id= 'headerElem'></h1>
+        <p id= 'promptElem'></p>
+        <h3 id= 'questionElem'></h3>
+        <div id = 'answerButtons'>
+            <button id= btn1></button>
+            <button id= btn2></button>
+            <button id= btn3></button>
+            <button id= btn4></button>
+        </div>
+        
+    </div>
 
 
     
