edited question array and function

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 <body>
 <!-- create boxes to put things in-->
     <div id = 'container'>
-        <button id='startButton'>Start Quiz</button>
-        <div id= 'time'></div>
-        <div id= 'finalScore'></div>
-        <h1 id= 'headerElem'></h1>
-        <p id= 'promptElem'></p>
-        <h3 id= 'questionElem'></h3>
-        <div id = 'answerButtons'>
-            <button id= btn1></button>
-            <button id= btn2></button>
-            <button id= btn3></button>
-            <button id= btn4></button>
+        <button id='start-button'>Start Quiz</button>
+        <div id='time-id'></div>
+        <div id='final-score'></div>
+        <h1 id='header-elem'></h1>
+        <p id='prompt-elem'></p
+            >
+        <div id='question-elem'>
+
+        </div>
+
+        <div id ='answer-buttons'>
+        
         </div>
         
     </div>
