attempting to make counter increment by 1

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <div id='time-id'></div>
         <div id='final-score'></div>
         <h1 id='header-elem'></h1>
-        <p id='prompt-elem'></p
-            >
+        <p id='prompt-elem'></p>
         <div id='question-elem'>
 
         </div>
