--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div id ='answer-buttons'>
         
         </div>
+        <div id='right-wrong-box'>
+
+        </div>
         
     </div>
 
