got timer to deduct time for wrong answer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- create boxes to put things in-->
     <div id = 'container'>
         <button id='start-button'>Start Quiz</button>
-        <div id='time-id'></div>
+        <div id='time-id'>Time: 0</div>
         <div id='final-score'></div>
         <h1 id='header-elem'></h1>
         <p id='prompt-elem'></p>
