--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
         <div id='final-score'></div>
         <h1 id='header-elem'></h1>
         <p id='prompt-elem'></p>
-        <div id='question-elem'>
-
+        <div id='question-elem'></div>
+        <div id ='answer-buttons'></div>
+        <div id='right-wrong-box'></div>
+        <div id ='high-scores'>
+            <ol id='scores-list'></ol>
         </div>
 
-        <div id ='answer-buttons'>
-        
-        </div>
-        <div id='right-wrong-box'>
-
-        </div>
-        
     </div>
 
 
